Adicionado arquivos do HyDE

--- a/config/ML4W/.config/hypr/conf/custom.conf
+++ b/config/ML4W/.config/hypr/conf/custom.conf
@@ -7,7 +7,8 @@ bind = $mainMod SHIFT, L, exec, ~/.config/ml4w/scripts/wlogout.sh               
 bind = $mainMod, A, exec, pkill rofi || rofi -show drun -replace -i                       # Open application launcher
 bind = $mainMod, B, exec, ~/.config/waybar/toggle.sh                                      # Toggle waybar
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/power.sh lock                            # Start wlogout
-#
+#bindd = Alt_R, Control_R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
+
 # Example for xwayland
 # xwayland {
 #   force_zero_scaling = true
