Várias adições e modificações

--- a/config/ML4W/.config/hypr/conf/custom.conf
+++ b/config/ML4W/.config/hypr/conf/custom.conf
@@ -8,6 +8,13 @@ bind = $mainMod, A, exec, pkill rofi || rofi -show drun -replace -i             
 bind = $mainMod, B, exec, ~/.config/waybar/toggle.sh                                      # Toggle waybar
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/power.sh lock                            # Start wlogout
 #bindd = Alt_R, Control_R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
+# Configuração do arquivo keybindings
+$d=[$ut|Screen Capture]
+bindd = $mainMod Shift, P, $d color picker, exec, hyprpicker -an # Pick color (Hex) >> clipboard#
+bindd = $mainMod SHIFT, PRINT, $d freeze and snip screen, exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh s # partial screenshot capture
+bindd = $mainMod CTRL, PRINT, $d freeze and snip screen, exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh sf # partial screenshot capture (frozen screen)
+binddl = $mainMod ALT, PRINT, $d print monitor , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh m # monitor screenshot capture
+binddl = , PRINT, $d print all monitors , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh p # all monitors screenshot capture
 
 # Example for xwayland
 # xwayland {
@@ -28,3 +35,6 @@ env = SDL_VIDEODRIVER,wayland
 
 # Blur for waybar
 #layerrule = blur, waybar
+
+# Autostart
+exec-once = /usr/local/bin/autostart.sh
