--- a/config/ML4W/.config/hypr/conf/custom.conf
+++ b/config/ML4W/.config/hypr/conf/custom.conf
@@ -2,19 +2,25 @@
 #
 # This is an additional key binding
 # bind = $mainMod CTRL, up, workspace, empty
-bind = $mainMod, N, exec, ~/.config/ml4w/settings/browser.sh          					  # Open the browser
-bind = $mainMod SHIFT, L, exec, ~/.config/ml4w/scripts/wlogout.sh                         # Start wlogout
+# Customização das ações
+bind = $mainMod, N, exec, ~/.config/ml4w/settings/browser.sh                              # Open the browser
 bind = $mainMod, A, exec, pkill rofi || rofi -show drun -replace -i                       # Open application launcher
 bind = $mainMod, B, exec, ~/.config/waybar/toggle.sh                                      # Toggle waybar
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/power.sh lock                            # Start wlogout
-#bindd = Alt_R, Control_R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
+bind = $mainMod, HOME, exec, ~/.config/waybar/toggle.sh                                   # Toggle waybar
+bind = $mainMod, END, exec, ~/.config/waybar/launch.sh                                    # Reload waybar
+bind = $mainMod CTRL, DELETE, exec, ~/.config/ml4w/scripts/wlogout.sh                     # Start wlogout
+bind = $mainMod, DELETE, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
+bind = CTRL ALT, DELETE, exec, ~/.config/ml4w/scripts/wlogout.sh                          # Start wlogout
 # Configuração do arquivo keybindings
 $d=[$ut|Screen Capture]
-bindd = $mainMod Shift, P, $d color picker, exec, hyprpicker -an # Pick color (Hex) >> clipboard#
+bindd = $mainMod Shift, P, $d color picker, exec, hyprpicker -an                                                    # Pick color (Hex) >> clipboard
 bindd = $mainMod SHIFT, PRINT, $d freeze and snip screen, exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh s # partial screenshot capture
 bindd = $mainMod CTRL, PRINT, $d freeze and snip screen, exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh sf # partial screenshot capture (frozen screen)
-binddl = $mainMod ALT, PRINT, $d print monitor , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh m # monitor screenshot capture
-binddl = , PRINT, $d print all monitors , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh p # all monitors screenshot capture
+binddl = $mainMod ALT, PRINT, $d print monitor , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh m          # monitor screenshot capture
+binddl = , PRINT, $d print all monitors , exec, $HOME/.config/hyde/.local/lib/hyde/screenshot2.sh p                 # all monitors screenshot capture
+
+
 
 # Example for xwayland
 # xwayland {
