--- a/config/ML4W/.config/hypr/conf/custom.conf
+++ b/config/ML4W/.config/hypr/conf/custom.conf
@@ -9,7 +9,7 @@ bind = $mainMod, B, exec, ~/.config/waybar/toggle.sh                            
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/power.sh lock                            # Start wlogout
 bind = $mainMod, HOME, exec, ~/.config/waybar/toggle.sh                                   # Toggle waybar
 bind = $mainMod, END, exec, ~/.config/waybar/launch.sh                                    # Reload waybar
-bind = $mainMod CTRL, DELETE, exec, ~/.config/ml4w/scripts/wlogout.sh                     # Start wlogout
+#bind = $mainMod CTRL, DELETE, exec, ~/.config/ml4w/scripts/wlogout.sh                     # Start wlogout
 bind = $mainMod, DELETE, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
 bind = CTRL ALT, DELETE, exec, ~/.config/ml4w/scripts/wlogout.sh                          # Start wlogout
 # Configuração do arquivo keybindings
