Atualizado lista de pacotes e renomeado formatacao.sh para pacman.ini

--- a/pacman/pacman.ini
+++ b/pacman/pacman.ini
@@ -74,6 +74,7 @@ PACOTE="flameshot"
 if verificar_pacote "$PACOTE"; then
 	echo "O pacote $PACOTE está instalado. Aplicando configuração..."
 	sudo pacman --noconfirm -R xf86-video-intel
+	sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c flameshot)"
 	sudo cp -a /usr/share/applications/org.flameshot.Flameshot.desktop /etc/skel/.local/share/applications
 	sudo sed -i 's|/usr/bin/flameshot|/usr/local/bin/flameshot|g' /etc/skel/.local/share/applications/org.flameshot.Flameshot.desktop
 	sudo sed -i 's|Exec=flameshot|Exec=/usr/local/bin/flameshot|g' /etc/skel/.local/share/applications/org.flameshot.Flameshot.desktop
@@ -206,12 +207,53 @@ if verificar_pacote "$PACOTE"; then
 fi
 
 ########################################################################################################
-# pacote-pacman-vscodium-ferramentas-cli.sh
+# Dependências opcionais de File Roller, gerenciador de arquivos compactados.
 
-# Instala os seguintes pacotes para análise e formatação de código:
-# jq          Processador de JSON no terminal
-# prettier    Formatador de código para várias linguagens
-## shellcheck  Analisador estático para scripts shell
-# shfmt       Formatador para scripts shell
-# stylelint   Linter para arquivos CSS e preprocessadores como SCSS
-# sudo pacman --needed --noconfirm -S jq prettier shellcheck shfmt stylelint
+# Nome do pacote
+PACOTE="file-roller"
+
+# Verifica se o pacote está instalado
+if verificar_pacote "$PACOTE"; then
+	sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c file-roller)"
+fi
+
+########################################################################################################
+# gerenciador-de-pacotes-flatpak.sh
+
+# Nome do pacote
+PACOTE="flatpak"
+
+# Verifica se o pacote está instalado
+if verificar_pacote "$PACOTE"; then
+	sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+fi
+
+########################################################################################################
+# gerenciador-de-pacotes-snapd.sh
+
+# Nome do pacote
+PACOTE="snapd"
+
+# Verifica se o pacote está instalado
+if verificar_pacote "$PACOTE"; then
+	# AppArmor (Recomendado usar, para manter a segurança dos pacotes Snap)
+	# https://wiki.archlinux.org/title/AppArmor
+	# Movido para Sessão de Scripts
+
+	# Instalação de pacotes via AUR
+
+	# Gerenciador de pacotes Snapd
+	# https://wiki.archlinux.org/title/Snap
+
+	sudo ln -s /var/lib/snapd/snap /snap
+	sudo systemctl enable --now snapd snapd.socket snapd.apparmor
+
+	# ocultar a pasta. snap
+	{
+		echo "snap"
+		echo "Snap"
+		echo "snapd"
+		echo "Snapd"
+	} | tee -a /etc/skel/.hidden >>/dev/null
+	cat /etc/skel/.hidden >>"$HOME"/.hidden
+fi
