Atualizado pacman.ini

--- a/pacman/pacman.ini
+++ b/pacman/pacman.ini
@@ -5,13 +5,27 @@ verificar_pacote() {
 	pacman -Q "$1" &>/dev/null
 }
 
+### Modelo instalação
+# Verificando pacotes
 # Nome do pacote
-PACOTE=""
-
+# PACOTES=("")
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
-	comandos
-fi
+# if verificar_pacote "$PACOTES"; then
+#	comandos
+# fi
+# Variável para verificar se algum pacote está instalado
+# PACOTE_INSTALADO=false
+# Loop para verificar cada pacote
+# for pacote in "${PACOTES[@]}"; do
+#	if verificar_pacote "$pacote"; then
+#		PACOTE_INSTALADO=true
+#		break
+#	fi
+# done
+# Se pelo menos um dos pacotes estiver instalado, aplica a configuração
+# if $PACOTE_INSTALADO; then
+#   comandos
+# fi
 
 ########################################################################################################
 # pacote-pacman-apparmor-instalar.sh
@@ -68,11 +82,11 @@ fi
 # pacote-pacman-flameshot.sh
 
 # Nome do pacote
-PACOTE="flameshot"
+PACOTES=("flameshot")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
-	echo "O pacote $PACOTE está instalado. Aplicando configuração..."
+if verificar_pacote "$PACOTES"; then
+	echo "O pacote $PACOTES está instalado. Aplicando configuração..."
 	sudo pacman --noconfirm -R xf86-video-intel
 	sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c flameshot)"
 	sudo cp -a /usr/share/applications/org.flameshot.Flameshot.desktop /etc/skel/.local/share/applications
@@ -90,19 +104,19 @@ fi
 # Tema de ícones
 
 # Nome do pacote
-PACOTE="obsidian-icon-theme"
+PACOTES=("obsidian-icon-theme")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Obsidian-Aqua-Light"
 fi
 
 # Nome do pacote
-# PACOTE="cutefish-icons"
+# PACOTES=("cutefish-icons")
 
 # Verifica se o pacote está instalado
-# if verificar_pacote "$PACOTE"; then
+# if verificar_pacote "$PACOTES"; then
 # 	gsettings set org.gnome.desktop.interface icon-theme ""
 # 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme ""
 # fi
@@ -111,10 +125,10 @@ fi
 # pacote-pacman-kernel-hook.sh
 
 # Nome do pacote
-PACOTE="kernel-modules-hook"
+PACOTES=("kernel-modules-hook")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	sudo systemctl enable --now linux-modules-cleanup.service # Ativa e inicia o serviço para limpar módulos antigos do kernel.
 fi
 
@@ -127,10 +141,10 @@ fi
 # pacote-pacman-orchis-theme-black.sh e pacote-pacman-orchis-theme-full.sh
 
 # Nome do pacote
-PACOTE="orchis-theme"
+PACOTES=("orchis-theme")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	gsettings set org.gnome.shell.extensions.user-theme name "Orchis-Dark-Compact"
 	gsettings set org.gnome.desktop.interface gtk-theme "Orchis-Dark-Compact"
 	gsettings set org.gnome.desktop.interface icon-theme "Orchis-Dark-Compact"
@@ -139,19 +153,19 @@ if verificar_pacote "$PACOTE"; then
 fi
 
 # Nome do pacote
-PACOTE="tela-circle-icon-theme-black"
+PACOTES=("tela-circle-icon-theme-black")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface icon-theme "Tela-circle-black"
 fi
 
 # Nome do pacote
-PACOTE="vimix-cursors"
+PACOTES=("vimix-cursors")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	gsettings set org.gnome.desktop.interface cursor-theme "Vimix-cursors"
 	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface cursor-theme "Vimix-cursors"
 fi
@@ -195,10 +209,10 @@ fi
 # pacote-pacman-telegram_instalar.sh
 
 # Nome do pacote
-PACOTE="telegram-desktop"
+PACOTES=("telegram-desktop")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	mkdir -p ~/.local/share/applications
 	cp -rf /usr/share/applications/org.telegram.desktop.desktop ~/.local/share/applications/org.telegram.desktop.desktop
 	sed -i '/Exec/s/\%u/\%u --hideStart/' ~/.local/share/applications/org.telegram.desktop.desktop
@@ -210,10 +224,10 @@ fi
 # Dependências opcionais de File Roller, gerenciador de arquivos compactados.
 
 # Nome do pacote
-PACOTE="file-roller"
+PACOTES=("file-roller")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c file-roller)"
 fi
 
@@ -221,10 +235,10 @@ fi
 # gerenciador-de-pacotes-flatpak.sh
 
 # Nome do pacote
-PACOTE="flatpak"
+PACOTES=("flatpak")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
 fi
 
@@ -232,10 +246,10 @@ fi
 # gerenciador-de-pacotes-snapd.sh
 
 # Nome do pacote
-PACOTE="snapd"
+PACOTES=("snapd")
 
 # Verifica se o pacote está instalado
-if verificar_pacote "$PACOTE"; then
+if verificar_pacote "$PACOTES"; then
 	# AppArmor (Recomendado usar, para manter a segurança dos pacotes Snap)
 	# https://wiki.archlinux.org/title/AppArmor
 	# Movido para Sessão de Scripts
