Atualizado pacman lst e ini

--- a/pacman/pacman.ini
+++ b/pacman/pacman.ini
@@ -271,3 +271,56 @@ if verificar_pacote "$PACOTES"; then
 	} | tee -a /etc/skel/.hidden >>/dev/null
 	cat /etc/skel/.hidden >>"$HOME"/.hidden
 fi
+
+########################################################################################################
+# pacote-aur-actions-for-nautilus.sh
+
+PACOTES=("actions-for-nautilus-git")
+
+if verificar_pacote "$PACOTES"; then
+## Configuração CUSTOMIZADA do Actions for Nautilus
+	mkdir -p "$HOME/.local/share/actions-for-nautilus"
+	curl -JLk -o "$HOME/.local/share/actions-for-nautilus/config.json" "https://raw.githubusercontent.com/elppans/actions-for-nautilus/refs/heads/main/configurator/sample-config.json"
+	sed -i 's/gnome-terminal/gnome-console/g' "$HOME/.local/share/actions-for-nautilus/config.json"
+	sed -i 's/gedit/gnome-text-editor/g' "$HOME/.local/share/actions-for-nautilus/config.json"
+	nautilus -q
+fi
+
+########################################################################################################
+# pacote-aur-xboxdrv_instalar.sh
+
+PACOTES=("xboxdrv")
+
+if verificar_pacote "$PACOTES"; then
+	sudo systemctl enable --now xboxdrv.service
+fi
+
+#########################################################################################################
+# pacote-aur-yaru-theme-full.sh
+
+
+PACOTES=("yaru-gnome-shell-theme yaru-gtk-theme  yaru-metacity-theme yaru-session")
+# Verifica se o pacote está instalado
+# if verificar_pacote "$PACOTES"; then
+#	comandos
+# fi
+
+yaru-icon-theme
+yaru-sound-theme
+# Variável para verificar se algum pacote está instalado
+PACOTE_INSTALADO=false
+
+# Loop para verificar cada pacote
+for pacote in "${PACOTES[@]}"; do
+	if verificar_pacote "$pacote"; then
+		PACOTE_INSTALADO=true
+		break
+	fi
+done
+# Se pelo menos um dos pacotes estiver instalado, aplica a configuração
+if $PACOTE_INSTALADO; then
+	gsettings set org.gnome.shell.extensions.user-theme name "Yaru-dark"
+	gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
+	sudo -u gdm dbus-launch gsettings set org.gnome.desktop.interface gtk-theme "Yaru-dark"
+fi
+
