--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -84,7 +84,7 @@ config_icon_obsidian() {
 
 config_kernel_hook() {
     log_info "Habilitando kernel hook..."
-    sudo systemctl enable --now linux-modules-cleanup.service
+    systemctl is-enabled linux-modules-cleanup.service || sudo systemctl enable --now linux-modules-cleanup.service
 }
 
 config_orchis_theme() {
@@ -231,7 +231,7 @@ aplicar_configuracao_pacote PACOTES_XBOXDRV config_xboxdrv
 aplicar_configuracao_pacote PACOTES_YARU config_yaru
 aplicar_configuracao_pacote PACOTES_ZAPZAP config_zapzap
 
-log_sucesso "Todas as configurações foram aplicadas com sucesso! 🎉"
+log_sucesso "Todas as configurações foram aplicadas com sucesso!"
 
 # =========================================
 # Declaração das listas de pacotes
