modificado pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -214,7 +214,7 @@ config_zapzap() {
 # Aplicações de configuração por pacote
 # =========================================
 
-aplicar_configuracao_pacote PACOTES_APPARMOR config_apparmor
+aplicar_configuracao_pacote "$PACOTES_APPARMOR" config_apparmor
 aplicar_configuracao_pacote PACOTES_FLAMESHOT config_flameshot
 aplicar_configuracao_pacote PACOTES_OBSIDIAN config_icon_obsidian
 aplicar_configuracao_pacote PACOTES_KERNEL_HOOK config_kernel_hook
