Atualizado pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -1,5 +1,4 @@
 #!/bin/bash
-
 # =========================================
 # Script de configuração baseado em pacotes instalados
 # =========================================
@@ -8,19 +7,19 @@
 # Funções de log com cores e emojis
 # =========================================
 log_info() {
-    echo -e "\e[34m🔍 INFO:\e[0m $1"
+    echo -e "\e[34mINFO:\e[0m $1"
 }
 
 log_sucesso() {
-    echo -e "\e[32m✅ SUCESSO:\e[0m $1"
+    echo -e "\e[32mSUCESSO:\e[0m $1"
 }
 
 log_erro() {
-    echo -e "\e[31m❌ ERRO:\e[0m $1"
+    echo -e "\e[31mERRO:\e[0m $1"
 }
 
 log_aviso() {
-    echo -e "\e[33m⚠️ AVISO:\e[0m $1"
+    echo -e "\e[33mAVISO:\e[0m $1"
 }
 
 # =========================================
@@ -47,9 +46,28 @@ aplicar_configuracao_pacote() {
 }
 
 # =========================================
+# Declaração das listas de pacotes
+# =========================================
+PACOTES_APPARMOR=("apparmor" "apparmor-utils" "apparmor-profiles")
+PACOTES_FLAMESHOT=("flameshot")
+PACOTES_OBSIDIAN=("obsidian-icon-theme")
+PACOTES_KERNEL_HOOK=("kernel-modules-hook")
+PACOTES_ORCHIS=("orchis-theme")
+PACOTES_TELA=("tela-circle-icon-theme-black")
+PACOTES_VIMIX=("vimix-cursors")
+PACOTES_STEAM=("steam" "steam-native-runtime")
+PACOTES_TELEGRAM=("telegram-desktop")
+PACOTES_FILE_ROLLER=("file-roller")
+PACOTES_FLATPAK=("flatpak")
+PACOTES_SNAPD=("snapd")
+PACOTES_ACTIONS=("actions-for-nautilus-git")
+PACOTES_XBOXDRV=("xboxdrv")
+PACOTES_YARU=("yaru-gnome-shell-theme" "yaru-gtk-theme" "yaru-metacity-theme" "yaru-session" "yaru-icon-theme" "yaru-sound-theme")
+PACOTES_ZAPZAP=("zapzap")
+
+# =========================================
 # Funções de configuração
 # =========================================
-
 config_apparmor() {
     log_info "Configurando AppArmor..."
     GRUB_FILE="/etc/default/grub"
@@ -213,8 +231,7 @@ config_zapzap() {
 # =========================================
 # Aplicações de configuração por pacote
 # =========================================
-
-aplicar_configuracao_pacote "$PACOTES_APPARMOR" config_apparmor
+aplicar_configuracao_pacote PACOTES_APPARMOR config_apparmor
 aplicar_configuracao_pacote PACOTES_FLAMESHOT config_flameshot
 aplicar_configuracao_pacote PACOTES_OBSIDIAN config_icon_obsidian
 aplicar_configuracao_pacote PACOTES_KERNEL_HOOK config_kernel_hook
@@ -232,23 +249,3 @@ aplicar_configuracao_pacote PACOTES_YARU config_yaru
 aplicar_configuracao_pacote PACOTES_ZAPZAP config_zapzap
 
 log_sucesso "Todas as configurações foram aplicadas com sucesso!"
-
-# =========================================
-# Declaração das listas de pacotes
-# =========================================
-PACOTES_APPARMOR=("apparmor" "apparmor-utils" "apparmor-profiles")
-PACOTES_FLAMESHOT=("flameshot")
-PACOTES_OBSIDIAN=("obsidian-icon-theme")
-PACOTES_KERNEL_HOOK=("kernel-modules-hook")
-PACOTES_ORCHIS=("orchis-theme")
-PACOTES_TELA=("tela-circle-icon-theme-black")
-PACOTES_VIMIX=("vimix-cursors")
-PACOTES_STEAM=("steam" "steam-native-runtime")
-PACOTES_TELEGRAM=("telegram-desktop")
-PACOTES_FILE_ROLLER=("file-roller")
-PACOTES_FLATPAK=("flatpak")
-PACOTES_SNAPD=("snapd")
-PACOTES_ACTIONS=("actions-for-nautilus-git")
-PACOTES_XBOXDRV=("xboxdrv")
-PACOTES_YARU=("yaru-gnome-shell-theme" "yaru-gtk-theme" "yaru-metacity-theme" "yaru-session" "yaru-icon-theme" "yaru-sound-theme")
-PACOTES_ZAPZAP=("zapzap")
