--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -147,7 +147,7 @@ config_telegram() {
 
 config_file_roller() {
     log_info "Configurando File Roller..."
-    sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c file-roller)"
+    sudo pacman --needed --noconfirm -S $(pacman-optdepends -c file-roller)
 }
 
 config_flatpak() {
