--- a/pacotes/flatpak.ini
+++ b/pacotes/flatpak.ini
@@ -8,42 +8,26 @@
 # Funções de log com cores e emojis
 # =========================================
 log_info() {
-    echo -e "\e[34m🔍 INFO:\e[0m $1"
+	echo -e "\e[34m🔍 INFO:\e[0m $1"
 }
 
 log_sucesso() {
-    echo -e "\e[32m✅ SUCESSO:\e[0m $1"
+	echo -e "\e[32m✅ SUCESSO:\e[0m $1"
 }
 
 log_erro() {
-    echo -e "\e[31m❌ ERRO:\e[0m $1"
+	echo -e "\e[31m❌ ERRO:\e[0m $1"
 }
 
 log_aviso() {
-    echo -e "\e[33m⚠️ AVISO:\e[0m $1"
+	echo -e "\e[33m⚠️ AVISO:\e[0m $1"
 }
 
 # =========================================
 # Função para verificar se um app Flatpak está instalado
 # =========================================
 verificar_flatpak() {
-    flatpak list --app | grep -q "$1"
-}
-
-# Função genérica para aplicar configuração se pelo menos um app Flatpak estiver instalado
-aplicar_configuracao_flatpak() {
-    local -n _APPS=$1
-    local funcao_config=$2
-
-    for app in "${_APPS[@]}"; do
-        if verificar_flatpak "$app"; then
-            log_info "Aplicando configuração para app Flatpak: $app"
-            "$funcao_config"
-            return
-        fi
-    done
-
-    log_aviso "Nenhum dos apps Flatpak encontrados: ${_APPS[*]}"
+	flatpak list --app | grep -q "$1"
 }
 
 # =========================================
@@ -51,36 +35,45 @@ aplicar_configuracao_flatpak() {
 # =========================================
 
 config_vscodium() {
-    log_info "Configurando VSCodium (Flatpak)..."
+	log_info "Configurando VSCodium (Flatpak)..."
 
-    cd || exit
-    if ! grep -q 'alias codium=' "$HOME/.bashrc"; then
-        echo -e 'alias codium="flatpak run com.vscodium.codium "' | tee -a "$HOME/.bashrc"
-    fi
-    alias codium="flatpak run com.vscodium.codium "
+	cd || exit
+	if ! grep -q 'alias codium=' "$HOME/.bashrc"; then
+		echo -e 'alias codium="flatpak run com.vscodium.codium "' | tee -a "$HOME/.bashrc"
+	fi
+	alias codium="flatpak run com.vscodium.codium "
 
-    mkdir -p "$HOME/.config/VSCodium/User"
-    curl -JLk -o /tmp/vscodium_backup.tar.gz "https://github.com/elppans/vscodeum/raw/refs/heads/main/vscodium_backup/vscodium_backup_20250226_170128.tar.gz"
+	mkdir -p "$HOME/.config/VSCodium/User"
+	curl -JLk -o /tmp/vscodium_backup.tar.gz "https://github.com/elppans/vscodeum/raw/refs/heads/main/vscodium_backup/vscodium_backup_20250226_170128.tar.gz"
 
-    tar -xzf /tmp/vscodium_backup.tar.gz -C "$HOME/.config/VSCodium/User/"
+	tar -xzf /tmp/vscodium_backup.tar.gz -C "$HOME/.config/VSCodium/User/"
 
-    if [ -f "$HOME/.config/VSCodium/User/extensions_list.txt" ]; then
-        cat "$HOME/.config/VSCodium/User/extensions_list.txt" | xargs -L 1 flatpak run com.vscodium.codium --install-extension
-        log_sucesso "Extensões restauradas!"
-    else
-        log_aviso "Arquivo extensions_list.txt não encontrado."
-    fi
+	if [ -f "$HOME/.config/VSCodium/User/extensions_list.txt" ]; then
+		cat "$HOME/.config/VSCodium/User/extensions_list.txt" | xargs -L 1 flatpak run com.vscodium.codium --install-extension
+		log_sucesso "Extensões restauradas!"
+	else
+		log_aviso "Arquivo extensions_list.txt não encontrado."
+	fi
 }
 
 # =========================================
-# Aplicações de configuração por app Flatpak
+# Mapeamento função => lista de apps Flatpak
 # =========================================
-
-aplicar_configuracao_flatpak FLATPAKS_VSCODIUM config_vscodium
-
-log_sucesso "Todas as configurações Flatpak foram aplicadas com sucesso! 🎉"
+declare -A CONFIGURACOES_FLATPAK=(
+	[config_vscodium]="com.vscodium.codium"
+)
 
 # =========================================
-# Declaração das listas de apps
+# Loop que aplica configuração para apps instalados
 # =========================================
-FLATPAKS_VSCODIUM=("com.vscodium.codium")
+for funcao in "${!CONFIGURACOES_FLATPAK[@]}"; do
+	for app in ${CONFIGURACOES_FLATPAK[$funcao]}; do
+		if verificar_flatpak "$app"; then
+			log_info "Aplicando $funcao para Flatpak detectado: $app"
+			"$funcao"
+			break
+		fi
+	done
+done
+
+log_sucesso "Todas as configurações Flatpak foram aplicadas com sucesso!"
