--- a/pacotes/flatpak.ini
+++ b/pacotes/flatpak.ini
@@ -8,19 +8,19 @@
 # Funções de log com cores e emojis
 # =========================================
 log_info() {
-	echo -e "\e[34m🔍 INFO:\e[0m $1"
+	echo -e "\e[34mINFO:\e[0m $1"
 }
 
 log_sucesso() {
-	echo -e "\e[32m✅ SUCESSO:\e[0m $1"
+	echo -e "\e[32mSUCESSO:\e[0m $1"
 }
 
 log_erro() {
-	echo -e "\e[31m❌ ERRO:\e[0m $1"
+	echo -e "\e[31mERRO:\e[0m $1"
 }
 
 log_aviso() {
-	echo -e "\e[33m⚠️ AVISO:\e[0m $1"
+	echo -e "\e[33mAVISO:\e[0m $1"
 }
 
 # =========================================
