Corrigido pacman.ini

--- a/pacotes/pacman.ini
+++ b/pacotes/pacman.ini
@@ -15,7 +15,7 @@ config_apparmor() {
 	if [ -f "$GRUB_FILE" ]; then
 		log_info "Configurando GRUB para AppArmor..."
 		if ! grep -q "apparmor=1" "$GRUB_FILE"; then
-			sudo sed -i 's/^(GRUB_CMDLINE_LINUX_DEFAULT=\"\)/\1apparmor=1 security=apparmor /' "$GRUB_FILE"
+			sudo sed -i 's/^\(GRUB_CMDLINE_LINUX_DEFAULT="\)/\1apparmor=1 security=apparmor /' "$GRUB_FILE"
 			log_sucesso "Parâmetros adicionados no GRUB."
 		fi
 		sudo grub-mkconfig -o /boot/grub/grub.cfg
@@ -28,7 +28,9 @@ config_apparmor() {
 config_flameshot() {
 	log_info "Configurando Flameshot..."
 	sudo pacman --noconfirm -R xf86-video-intel
-	sudo pacman --needed --noconfirm -S "$(pacman-optdepends -c flameshot)"
+	sudo pacman --needed --noconfirm -S $(pacman-optdepends -c flameshot)
+	sudo mkdir -p /etc/skel/.local/share/applications
+	mkdir -p "$HOME/.local/share/applications"
 	local desktop_file="/etc/skel/.local/share/applications/org.flameshot.Flameshot.desktop"
 	sudo cp -a /usr/share/applications/org.flameshot.Flameshot.desktop "$desktop_file"
 	sudo sed -i 's|/usr/bin/flameshot|/usr/local/bin/flameshot|g' "$desktop_file"
@@ -73,17 +75,17 @@ config_steam() {
 	cp -av /usr/share/applications/steam-native.desktop "$HOME/.config/autostart/"
 	sed -i 's|Exec=/usr/bin/steam-native %U|Exec=/usr/bin/steam-native %U -silent|' "$HOME/.config/autostart/steam-native.desktop"
 	sudo sed -i '/en_US.UTF-8 UTF-8/s///' /etc/locale.gen
-	grep 'STEAM_FRAME_FORCE_CLOSE' "$HOME/.pam_environment" || echo 'STEAM_FRAME_FORCE_CLOSE DEFAULT=1' >>"$HOME/.pam_environment"
+	grep 'STEAM_FRAME_FORCE_CLOSE' "$HOME/.pam_environment" &>>/dev/null || echo 'STEAM_FRAME_FORCE_CLOSE DEFAULT=1' | tee -a "$HOME/.pam_environment"
 	grep 'STEAM_FRAME_FORCE_CLOSE' "/etc/environment" || echo 'STEAM_FRAME_FORCE_CLOSE=1' | sudo tee -a "/etc/environment"
 }
 
 config_telegram() {
 	log_info "Configurando Telegram..."
-	mkdir -p ~/.local/share/applications
-	cp -rf /usr/share/applications/org.telegram.desktop.desktop ~/.local/share/applications/
-	sed -i '/Exec/s/%u/%u --hideStart/' ~/.local/share/applications/org.telegram.desktop.desktop
-	cp -rf ~/.local/share/applications/org.telegram.desktop.desktop ~/.config/autostart/
-	chmod +x ~/.config/autostart/org.telegram.desktop.desktop
+	mkdir -p "$HOME/.local/share/applications" "$HOME/.config/autostart"
+	cp -rf /usr/share/applications/org.telegram.desktop.desktop "$HOME/.local/share/applications/"
+	sed -i '/Exec/s/%u/%u --hideStart/' "$HOME/.local/share/applications/org.telegram.desktop.desktop"
+	cp -rf "$HOME/.local/share/applications/org.telegram.desktop.desktop" "$HOME/.config/autostart/"
+	chmod +x "$HOME/.config/autostart/org.telegram.desktop.desktop"
 }
 
 config_file_roller() {
@@ -105,7 +107,7 @@ config_snapd() {
 		echo "Snap"
 		echo "snapd"
 		echo "Snapd"
-	} | tee -a /etc/skel/.hidden >>/dev/null
+	} | sudo tee -a /etc/skel/.hidden >>/dev/null
 	cat /etc/skel/.hidden >>"$HOME"/.hidden
 }
 
@@ -163,10 +165,11 @@ config_yaru() {
 
 config_zapzap() {
 	log_info "Configurando ZapZap..."
-	cp -rf /usr/share/applications/com.rtosta.zapzap.desktop ~/.local/share/applications/
-	sed -i '/Exec/s/%u/%u --hideStart/' ~/.local/share/applications/com.rtosta.zapzap.desktop
-	cp -rf ~/.local/share/applications/com.rtosta.zapzap.desktop ~/.config/autostart/
-	chmod +x ~/.config/autostart/com.rtosta.zapzap.desktop
+	mkdir -p "$HOME/.local/share/applications" "$HOME/.config/autostart"
+	cp -rf /usr/share/applications/com.rtosta.zapzap.desktop "$HOME/.local/share/applications/"
+	sed -i '/Exec/s/%u/%u --hideStart/' "$HOME/.local/share/applications/com.rtosta.zapzap.desktop"
+	cp -rf "$HOME/.local/share/applications/com.rtosta.zapzap.desktop" "$HOME/.config/autostart/"
+	chmod +x "$HOME/.config/autostart/com.rtosta.zapzap.desktop"
 }
 
 # =========================================
